[gd_scene load_steps=2 format=3 uid="uid://cneceewifvkd0"]

[ext_resource type="Script" uid="uid://dmjf4yfmfc82k" path="res://src/entitles/base_character.gd" id="1_dxpj2"]

[node name="BaseCharacter" type="Node2D"]
script = ExtResource("1_dxpj2")

[node name="CharAnimation" type="AnimatedSprite2D" parent="."]

[node name="CharBody" type="CollisionShape2D" parent="."]

[node name="CharBase" type="CollisionShape2D" parent="."]
